--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "4.17.2",
     "node-pg-migrate": "6.2.1",
     "pg": "8.7.1"
   }
